[package]
name = "libpg_query2-sys"
links = "pg_query"
description = "FFI bindings to libpg_query-13-2.0.7"
version = "0.2.0"
authors = ["Timothy Bess <tdbgamer@gmail.com>"]
build = "build.rs"
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/avstack/libpg_query2-sys"

[lib]
name = "libpg_query"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.58"
make-cmd = "0.1"
